# template_onion_with_mqtt/server/Application/Models/Dtos/ApplicationBaseDto.cs
@@ -1,0 +1,6 @@
+namespace Application.Models.Dtos;
+
+public abstract class ApplicationBaseDto
+{
+    public abstract string eventType { get; set; }
+}
