# template_onion_with_mqtt/server/Application/Models/Dtos/BroadcastModels/ServerBroadcastsLiveDataToDashboard.cs
@@ -1,0 +1,10 @@
+using Application.Models.Dtos;
+using Core.Domain.Entities;
+
+namespace Application.Services;
+
+public class ServerBroadcastsLiveDataToDashboard : ApplicationBaseDto
+{
+    public List<Devicelog> Logs { get; set; }
+    public override string eventType { get; set; } = nameof(ServerBroadcastsLiveDataToDashboard);
+}
